# graphix-statevector-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml  typecheck.yml
benchmarks/: bench_mqtbench.py  bench_statevec.py
src/graphix_statevec_template/: __init__.py  graphix_statevec_template.py
tests/: test_statevec.py
